remove / add color

--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -19,15 +19,24 @@ $btn-font-size: 30px;
 
 @import "../node_modules/bootstrap/scss/mixins";
 
-$theme-colors: (
-    "primary" : #e3e3e3,
-    "secondary" : $secondary,
-    "success" : $success,
-    "info" : $info,
-    "warning" : $warning,
-    "danger" : $danger,
-    "light" : $light,
-    "dark" : $dark
+// $theme-colors: (
+//     "primary" : #e3e3e3,
+//     "secondary" : $secondary,
+//     "success" : $success,
+//     "info" : $info,
+//     "warning" : $warning,
+//     "danger" : $danger,
+//     "light" : $light,
+//     "dark" : $dark
+// );
+
+// 新增
+$custom-colors: (
+    "xxx-color":#900,
 );
+$theme-colors: map-merge($theme-colors, $custom-colors );
+
+// 移除
+$theme-colors: map-remove($theme-colors, "info", "light", "dark" );
 
 @import "../node_modules/bootstrap/scss/buttons";
