--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -40,4 +40,9 @@
 
 // @import "../node_modules/bootstrap/scss/buttons";
 
-@import "../node_modules/bootstrap/scss/root";
+// @import "../node_modules/bootstrap/scss/root";
+
+
+.custom-container {
+    @include make-container();    
+}
