--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -4,6 +4,7 @@
 
 // $btn-font-size: 30px;
 
+$enable-cssgrid: true;
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 // Then add additional custom code here
