--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -12,19 +12,44 @@
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/utilities";
 
+$utilities: map-merge($utilities,
+        ("cursor":(property: cursor,
+                class: cursor,
+                responsive: true,
+                values: auto pointer grab,
+            )));
+
 $utilities: map-merge(
     $utilities,
     (
-        "cursor":(
-            property: cursor,
-            class: cursor,
-            responsive: true,
-            values: auto pointer grab,
-        )
-    )
+        "width": map-merge(
+            map-get($utilities, "width"),
+            (
+                values: map-merge(
+                    map-get(map-get($utilities,"width"),"values"),
+                    (custom: 300px),
+                ),
+            ),
+        ),
+    ),
 );
 
-
+$utilities: map-merge(
+    $utilities,(
+        "border":map-merge(
+            map-get($utilities, "border"),
+            ( responsive: true),
+        ),
+        "border-width":map-merge(
+            map-get($utilities, "border-width"),
+            ( responsive: true),
+        ),
+        "margin-start": map-merge(
+            map-get($utilities,"margin-start"),
+            (class: ml),
+        ),
+    )
+);
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 // // Then add additional custom code here
